Fixed the bug that was causing infinite loops in the suduko solver. I have now generalised the class more so that it doesnt store any suduko, it only purpose is to determine if they are solvable. suduko generator will act as a storage for the suduko instead.